fixing overlap and centering issue

--- a/RigoPortfolio.css
+++ b/RigoPortfolio.css
@@ -46,6 +46,14 @@ body{
   float: right;
   line-height: 80px;
 }
+*{
+  color: rgb(255, 255, 255);
+  margin: 0;
+  padding: 0;
+}
+.contact-section{
+  background: cover;
+}
 .border{
   width: 100px;
   height: 10px;
@@ -84,12 +92,6 @@ ul li:nth-child(5) a {
   font-weight: 400;
   margin-bottom: 8px;
 }
-*{
-  color: rgb(255, 255, 255);
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
 .contact-section h1{
   text-align: center;
@@ -115,7 +117,7 @@ ul li:nth-child(5) a {
   transition: 0.5a;
 }
 .contact-form-text:focus{
-  box-shadow: 0 0 10px 4px #34495e;
+  box-shadow: 0 0 10px 4px #ff8700;
 }
 textarea.contact-form-text{
   resize: none;
@@ -132,7 +134,7 @@ textarea.contact-form-text{
   transition: 0.5s;
 }
 .contact-form-btn:hover{
-  background: rgb(255, 135, 0); 
+  background: #ff8700; 
 }
 .box{
   width: 450px;
